# tuner

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: embeddings.npy  genres.txt
scratch/: explore_embeddings.py  explore_embessings.py  export_model_to_onnx.py  export_onnx_properly_pls.py  gen_data.py  playlist-gen.py  playlist-gen2.py  playlist-gen3.py
scratch/data/: artists.txt  playlists.json  usernames.txt  users.json
static/: index.css
templates/: base.html  deleted.html  home.html  in-progress.html  login.html  privacy_policy.html  results.html
tests/: test_core.py  test_encode.py
tuner/: __main__.py  core.py  data.py  db.py  download.py  encode.py  globals.py  playlist.py  utils.py
tuner/embeddings/: compile.py
